--- a/README.adoc
+++ b/README.adoc
@@ -17,6 +17,7 @@ So:
 
 . We refuse to maintain special implementations for any "known" items such as "known package types" or "known qualifiers", etc.
 . Therefore, we don't support any special cases for known package types such as Maven, Docker, PyPI, etc.
+. The most notable consequence is that our canonical purls are always lowercase, which fails the majority of case-sensitive special case purl examples
 . And we still encode all qualifier values (so no special treatment for `checksum`, `vers`, `repository_url`, `download_url`, `vcs_url`, etc.)
 
 == Supported platforms
